Fix test driver toolbar introducing a horizontal scrollbar. https://codereview.appspot.com/8126043
R=felix8a@gmail.com


git-svn-id: https://google-caja.googlecode.com/svn/trunk@5333 360991c0-9f3b-0410-ba87-8b362a00edf4

--- a/tests/com/google/caja/plugin/browser-test.css
+++ b/tests/com/google/caja/plugin/browser-test.css
@@ -57,11 +57,14 @@
   border: 2px solid #777;
 }
 
-/* test framework toolbar */
+/* test framework toolbar and page layout */
+html { margin: 0; }
+body { margin: 0.5em; }  /* known margin to negate for toolbar */
 #toolbar {
    background: #ccf;
-   margin: -1em -1em 1em -1em;
-   padding: 1.5em 1.5em .12em 1.5em;
+   margin: -0.5em -0.5em 0.5em;
+   padding: 1em 1em .12em 1em;
+   overflow-x: hidden;
 }
 #toolbar .widget, #toolbar .nonwidget {
   display: inline-block;
